--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <title>Il Nostro Progetto Scolastico</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="main.css">
-  <script defer src="index.js"></script>
+    <script src="index.js" defer></script>
+
+
 </head>
 <body>
   <!-- Hamburger Menu -->
@@ -15,11 +17,11 @@
   <!-- Sidebar -->
   <nav class="sidebar" id="sidebar">
     <div class="sidebar-header">
-      <h2>Navigazione</h2>
+      <h2>Navigation</h2>
     </div>
-    <a href="index.html">Pagina Principale</a>
-    <a href="author.html">Biografia dell'Autore</a>
-    <a href="concepts.html">Concetti</a>
+    <a href="index.html">Home</a>
+    <a href="Marx.html">Marx</a>
+    <a href="concepts.html">Concepts</a>
   </nav>
 
   <!-- Main Content -->
@@ -27,7 +29,6 @@
     <h2>Concetti</h2>
     <p>
       Questo è un sito web che abbiamo sviluppato per dimostrare le nostre abilità con i
-      <span class="preview-container" onmouseover='showPreview(event, "https://it.wikipedia.org/wiki/Collegamento_ipertestuale")' onmouseout="hidePreview()">
         <a href="https://it.wikipedia.org/wiki/Collegamento_ipertestuale">link ipertestuali</a>
       </span>.
       Tutto il contenuto di questo sito web è stato scritto da Francesco Serangeli e Marianna Rago della classe 5AU.
@@ -35,7 +36,7 @@
     <p>Clicca <a href="Marx.html">qui</a> per cominciare la tua esplorazione.</p>
   </main>
 
-  <!-- Hover Preview Box -->
+  Hover Preview Box
   <div id="preview-box" class="preview-box"></div>
 
   <script>
