--- a/Marx.html
+++ b/Marx.html
@@ -6,7 +6,7 @@
   <title>Presentazione di Karl Marx</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="main.css">
-  <script defer src="index.js"></script>
+  <script src="index.js" defer></script>
 
 </head>
 <body>
@@ -26,27 +26,71 @@
 
   <!-- Main Content -->
   <main class="content" id="content">
-    <img src="https://cdn.britannica.com/22/59822-050-98F24569/Karl-Marx-1870.jpg" alt="Foto dell'autore" class="author-image">
+    <img src="https://cdn.britannica.com/22/59822-050-98F24569/Karl-Marx-1870.jpg" alt="Foto di Karl Marx" class="author-image">
     <h2>Presentazione di Karl Marx</h2>
+
+    <h3>Le Origini e la Formazione Filosofica</h3>
     <p>
-      Karl Marx è una delle figure più influenti del pensiero politico e sociale, nato a <a href="https://maps.app.goo.gl/2mCd5u5166d8VNnY8">Treviri</a> in Germania, il 5 maggio 1818. La sua vita e il suo pensiero hanno segnato profondamente la storia mondiale.
+      Karl Marx nacque il <strong>5 maggio 1818</strong> a <a href="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d329234.7442091731!2d6.0396213!3d49.8584938!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47957c9bd11cfbc5%3A0xfe0ca3a54dcd724b!2sTreviri%2C%20Germania!5e0!3m2!1sit!2sbe!4v1739180517402!5m2!1sit!2sbe">Treviri</a>, in Germania, in una famiglia borghese di origini ebraiche convertita al cristianesimo per ragioni legali e sociali.
+      Studiò legge e filosofia presso le università di <a href="https://www.uni-bonn.de/en">Bonn</a> e <a href="https://www.fu-berlin.de/en/index.html">Berlino</a>, dove venne influenzato dalle teorie del filosofo tedesco <strong><a href="hegel.html" >Wilhelm Friedrich Hegel DA FARE</a></strong>.
     </p>
     <p>
-      Cresciuto in un ambiente intellettuale e immerso nelle correnti <b name=" test ">filosofiche dell’epoca</b>, Marx studiò legge e filosofia, abbracciando inizialmente il pensiero hegeliano e sviluppando una critica radicale nei confronti della società capitalista.
+      A Berlino si avvicinò alla corrente dei <em><a href="https://it.wikipedia.org/wiki/Sinistra_hegeliana">giovani hegeliani</a></em>, un gruppo di intellettuali radicali che criticavano la religione e lo stato prussiano. Tuttavia, Marx si distaccò gradualmente dal pensiero idealista di Hegel e iniziò a sviluppare una visione più materialista della storia e della società.
+    </p>
+
+    <h3>L'Attività Giornalistica e il Pensiero Politico</h3>
+    <p>
+      Dopo gli studi, Marx intraprese la carriera giornalistica, scrivendo articoli critici contro il regime prussiano. Nel 1842 divenne redattore capo della <em><a href="https://it.wikipedia.org/wiki/Rheinische_Zeitung">Gazzetta Renana</a></em>, un quotidiano liberale che venne però chiuso dalle autorità a causa delle sue posizioni troppo radicali.
     </p>
     <p>
-      Nel 1848, insieme a Friedrich Engels, pubblicò il <em>Manifesto del Partito Comunista</em>, un testo rivoluzionario che denunciava le ingiustizie del sistema capitalistico e proponeva la lotta di classe come strumento per il cambiamento sociale.
+      Costretto all’esilio, Marx si trasferì prima a Parigi, dove entrò in contatto con i movimenti socialisti e rivoluzionari dell’epoca, e poi a Bruxelles. Qui approfondì la sua analisi del capitalismo e sviluppò le basi della sua teoria economica e politica.
+    </p>
+
+    <h3>Il Manifesto del Partito Comunista</h3>
+    <p>
+      Nel <strong>1848</strong>, insieme a <a href="engels.html">Friedrich Engels</a>, Marx scrisse il <em><a href="manifesto.html">Manifesto del Partito Comunista</a></em>, un'opera che divenne il punto di riferimento del movimento operaio internazionale.
+      Il testo analizza le contraddizioni del capitalismo e proclama la necessità della <strong title="conflitto tra gruppi sociali con interessi economici opposti, in particolare tra proletariato (lavoratori) e borghesia (proprietari dei mezzi di produzione).">lotta di classe</strong> per rovesciare il dominio della borghesia e instaurare una società senza classi.
     </p>
     <p>
-      La sua opera monumentale, <em>Il Capitale</em>, rappresenta un’analisi profonda dei meccanismi economici e sociali del capitalismo, mettendo in luce il ruolo dello sfruttamento e le contraddizioni interne del sistema.
+      Il Manifesto introduce il concetto di <em> <a href="CorrentiFilosofiche.html#materialismo_storico">materialismo storico</a></em>, secondo cui la storia dell'umanità è determinata dai rapporti economici e dalla lotta tra classi sociali. La famosa frase <strong>"Proletari di tutto il mondo, unitevi!"</strong> sintetizza il messaggio rivoluzionario dell'opera.
+    </p>
+
+    <h3>Il Capitale e la Critica al Capitalismo</h3>
+    <p>
+      La sua opera più importante, <em><a href="capitale.html">Il Capitale</a></em>, pubblicata nel <strong>1867</strong>, rappresenta un'analisi approfondita delle leggi economiche del capitalismo.
+      Marx dimostra come il sistema capitalistico si basi sullo <strong>sfruttamento del lavoro</strong> e come la ricerca del profitto porti inevitabilmente a crisi economiche e disuguaglianze sempre maggiori.
     </p>
     <p>
-      Nonostante le controversie e le difficoltà, Marx trascorse gran parte della sua vita in esilio a Londra, dove continuò a scrivere e a influenzare il dibattito politico internazionale. Morì il 14 marzo 1883, lasciando un’eredità intellettuale che ancora oggi stimola il pensiero critico e la lotta per la giustizia sociale.
+      Il Capitale introduce concetti fondamentali come il <strong ><a href="plusvalore.html">plusvalore</a></strong>, ovvero la differenza tra il valore prodotto dai lavoratori e il salario che ricevono, che viene appropriato dai capitalisti per accumulare ricchezza.
+      Marx prevede che il capitalismo, a causa delle sue contraddizioni interne, sarà destinato a collassare e verrà sostituito dal socialismo e, infine, dal comunismo.
+    </p>
+
+    <h3>L'Esilio a Londra e gli Ultimi Anni</h3>
+    <p>
+      A causa delle sue idee rivoluzionarie, Marx fu costretto all'esilio e si stabilì definitivamente a Londra nel <strong>1849</strong>. Qui visse in condizioni di estrema povertà, sostenuto finanziariamente dal suo amico <a href="engels.html"> Engels</a>
     </p>
     <p>
-      La figura di Karl Marx continua a essere studiata e discussa in tutto il mondo, rappresentando un punto di riferimento fondamentale per comprendere le dinamiche economiche e sociali della società moderna.
+      Nonostante le difficoltà, continuò a scrivere e a studiare, influenzando profondamente il movimento operaio internazionale. Partecipò alla fondazione della <strong><a href="https://it.wikipedia.org/wiki/Associazione_Internazionale_dei_Lavoratori">Prima Internazionale</a></strong>, un'organizzazione che riuniva i lavoratori di diversi paesi per promuovere la lotta per i loro diritti.
     </p>
+    <p>
+      Morì il <strong>14 marzo 1883</strong> a Londra, lasciando un'eredità intellettuale che continua a essere al centro del dibattito economico e politico mondiale.
+    </p>
+
+    <h3>L'Eredità di Karl Marx</h3>
+    <p>
+      Le idee di Karl Marx hanno avuto un impatto enorme sulla storia del XX secolo. Il marxismo ha ispirato rivoluzioni, movimenti politici e governi in tutto il mondo, dalla Rivoluzione Russa del <strong>1917</strong> all'espansione del socialismo in Cina, Cuba e altri paesi.
+    </p>
+    <p>
+      Oggi, il pensiero marxista continua a essere studiato nelle università e utilizzato come strumento di analisi per comprendere le disuguaglianze economiche e sociali moderne.
+      Concetti come l’alienazione del lavoro, l'accumulazione del capitale e la lotta di classe restano fondamentali per chiunque voglia comprendere le dinamiche del sistema economico globale.
+    </p>
+    
+    <p>
+      Che si sia d’accordo o meno con le sue teorie, <strong>Karl Marx</strong> rimane una delle figure più influenti della storia del pensiero umano.
+    </p>
+
   </main>
+
 
   <script>
     // Toggle Sidebar
@@ -76,5 +120,9 @@
       }
     });
   </script>
+  Hover Preview Box
+  <div id="preview-box" class="preview-box"></div>
+
+  <!--  -->
 </body>
 </html>
