--- a/concepts.html
+++ b/concepts.html
@@ -17,8 +17,8 @@
     <div class="sidebar-header">
       <h2>Navigation</h2>
     </div>
-    <a href="index.html">Landing Page</a>
-    <a href="author.html">Author Biography</a>
+    <a href="index.html">Home</a>
+    <a href="Marx.html">Marx</a>
     <a href="concepts.html">Concepts</a>
   </nav>
 
