--- a/heinrichmarx.html
+++ b/heinrichmarx.html
@@ -3,10 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Il Manifesto del Partito Comunista</title>
+  <title>Presentazione di Karl Marx</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="main.css">
+  <link href='https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.css' rel='stylesheet' />
+<script src='https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.js'></script>
+
   <script src="index.js" defer></script>
+
 </head>
 <body>
   <!-- Hamburger Menu -->
@@ -21,32 +25,19 @@
     <a href="author.html">Author Biography</a>
     <a href="concepts.html">Concepts</a>
     <a href="marx.html">Karl Marx</a>
-    <a href="engels.html">Friedrich Engels</a>
-    <a href="il_capitale.html">Il Capitale</a>
-    <a href="manifesto.html">Manifesto del Partito Comunista</a>
   </nav>
 
   <!-- Main Content -->
   <main class="content" id="content">
-    <img src="https://editoririuniti.it/cdn/shop/products/il_manifesto_del_partito_comunista_marx_engels_editori_riuniti.jpg?v=1526999387&width=1024" 
-         alt="Copertina del Manifesto del Partito Comunista" class="author-image">
-    <h2>Il Manifesto del Partito Comunista</h2>
-    <p>
-      Il <em>Manifesto del Partito Comunista</em> è un'opera scritta da <a href="Marx.html">Karl Marx</a> e <a href="engels.html">Friedrich Engels</a>, pubblicata per la prima volta il 21 febbraio 1848. Questo documento rappresenta una delle basi teoriche del comunismo e ha avuto un impatto enorme sulla storia politica e sociale del mondo.
-    </p>
-    <p>
-      Il manifesto si apre con la celebre frase: <strong>“Uno spettro si aggira per l’Europa: lo spettro del comunismo”</strong>, e prosegue con un’analisi delle lotte di classe e del ruolo della borghesia e del proletariato nella storia.
-    </p>
-    <p>
-      Uno dei concetti chiave del testo è la necessità della <a href="https://it.wikipedia.org/wiki/Lotta_di_classe">lotta di classe</a> per superare il sistema capitalistico e arrivare a una società senza classi, basata sulla proprietà collettiva dei mezzi di produzione.
-    </p>
-    <p>
-      Il manifesto termina con l’invito all’unità tra i lavoratori di tutto il mondo, con la famosa esortazione: <strong>“Proletari di tutti i paesi, unitevi!”</strong>.
-    </p>
-    <p>
-      Ancora oggi, il <em>Manifesto del Partito Comunista</em> viene studiato e discusso per la sua importanza storica e politica, influenzando movimenti sociali e rivoluzioni in tutto il mondo.
-    </p>
+    <h2>Heinrich Marx</h2>
+    <p>Heinrich Marx è principalmente ricordato come il padre di <a href="marx.html">Karl Marx</a>, uno dei pensatori più influenti della storia. Nato in una famiglia borghese e di origini ebraiche, Heinrich intraprese la carriera legale, distinguendosi per la sua preparazione e per il rigore professionale. In un contesto europeo segnato da profondi cambiamenti sociali e culturali, la sua conversione al cristianesimo luterano evidenziò le pressioni di integrazione e l’adattamento alle norme della società prussiana del XIX secolo.</p>
+
+    <p>La vita di Heinrich Marx si svolse in un periodo in cui l'Europa era attraversata da trasformazioni politiche e industriali. La sua professione di avvocato non solo lo rese partecipe della vita intellettuale e legale del tempo, ma influenzò anche l'ambiente familiare in cui crebbe <a href="marx.html">Karl Marx</a>. Tale ambiente fu caratterizzato da un'intensa attività culturale e dalla trasmissione di valori di giustizia e riforma, elementi che avrebbero in seguito segnato il pensiero del celebre figlio. </p>
+    
+    <p>Nonostante le informazioni specifiche sulla vita personale di Heinrich siano limitate, il suo impatto risulta evidente nell’eredità culturale e nelle scelte educative che influenzarono il percorso intellettuale di Karl Marx. L’ambiente familiare, intriso di dibattiti e riflessioni sui valori sociali, contribuì a plasmare un giovane capace di analizzare criticamente le strutture di potere e le dinamiche economiche del suo tempo.</p>
+    
   </main>
+
 
   <script>
     // Toggle Sidebar
@@ -78,5 +69,7 @@
   </script>
   Hover Preview Box
   <div id="preview-box" class="preview-box"></div>
+
+  <!--  -->
 </body>
 </html>
