--- a/index.html
+++ b/index.html
@@ -31,9 +31,14 @@
       Questo è un sito web che abbiamo sviluppato per dimostrare le nostre abilità con i
         <a href="https://it.wikipedia.org/wiki/Collegamento_ipertestuale">link ipertestuali</a>
       </span>.
-      Tutto il contenuto di questo sito web è stato scritto da Francesco Serangeli e Marianna Rago della classe 5AU.
+      Tutto il contenuto di questo sito web è stato scritto da <a href="https://www.instagram.com/francesco.serangeli?igsh=MTR6c28zbDd5MTM4cw==">Francesco Serangeli</a>, <a href="https://www.instagram.com/mary_rago0?igsh=MTE1bnB1N2ZqczE1bA==">Marianna Rago</a> e <a href="https://www.instagram.com/trendelina.xhafa?igsh=MTk2dXRlN3IwbGlxMw==">Trendelina Xhafa</a> della classe 5AU.
     </p>
     <p>Clicca <a href="Marx.html">qui</a> per cominciare la tua esplorazione.</p>
+    <!-- <div class="avatar-wrapper">
+      <img class="avatar" src="https://graph.facebook.com/USER_ID/picture?type=square" alt="User Avatar">
+      <div class="avatar-outline"></div> marianna ti voglio bene  ma non ho tempo.
+    </div> -->
+    
   </main>
 
   Hover Preview Box
