--- a/plusvalore.html
+++ b/plusvalore.html
@@ -30,21 +30,21 @@
   <main class="content" id="content">
     <h1>Il Plusvalore secondo Karl Marx</h1>
     <p>
-      Il concetto di **plusvalore** è fondamentale nell'analisi economica di Karl Marx. Si riferisce alla
+      Il concetto di **plusvalore** è fondamentale nell'analisi economica di <a href="Marx.html">Karl Marx</a>. Si riferisce alla
       differenza tra il valore che il lavoro umano aggiunge a un bene e il salario che il lavoratore riceve per
       la sua attività lavorativa.
     </p>
     <p>
-      Marx sostiene che nel sistema capitalistico, i capitalisti traggono profitto dallo sfruttamento del lavoro,
+      <a href="Marx.html">Marx</a> sostiene che nel sistema capitalistico, i capitalisti traggono profitto dallo sfruttamento del lavoro,
       appropriandosi di una parte del valore che i lavoratori producono, ma che non viene loro restituito sotto
-      forma di salario. Questo surplus, chiamato **plusvalore**, è alla base della dinamica di accumulazione del
+      forma di salario. Questo surplus, chiamato <b>plusvalore</b>, è alla base della dinamica di accumulazione del
       capitale.
     </p>
 
     <h2>Definizione di Plusvalore</h2>
     <p>
-      Il **plusvalore** è il valore che il lavoratore crea oltre il valore del proprio salario, ed è il cuore
-      del processo di sfruttamento nel capitalismo. Marx spiega che il lavoro è l'unica fonte di valore in
+      Il <b>plusvalore</b> è il valore che il lavoratore crea oltre il valore del proprio salario, ed è il cuore
+      del processo di sfruttamento nel capitalismo. <a href="Marx.html">Marx</a> spiega che il lavoro è l'unica fonte di valore in
       un'economia, ma i capitalisti pagano i lavoratori una parte inferiore del valore che questi ultimi
       producono. Il plusvalore rappresenta dunque il profitto derivante dallo sfruttamento del lavoro.
     </p>
@@ -59,7 +59,7 @@
 
     <h2>Il Plusvalore e il Capitale</h2>
     <p>
-      Secondo Marx, il plusvalore è essenziale per comprendere il funzionamento del capitalismo. I capitalisti
+      Secondo <a href="Marx.html">Marx</a>, il plusvalore è essenziale per comprendere il funzionamento del capitalismo. I<a href="capitale.html"> capitalisti</a>
       non producono valore da soli, ma dipendono dal lavoro salariato per generare plusvalore. Questo meccanismo
       è alla base della disuguaglianza economica e della concentrazione di ricchezza nelle mani di pochi, mentre
       i lavoratori restano nella miseria.
@@ -74,7 +74,7 @@
     </p>
 
     <p>
-      In sintesi, il **plusvalore** è il concetto che Marx utilizza per descrivere lo sfruttamento dei lavoratori
+      In sintesi, il <b>plusvalore</b> è il concetto che <a href="Marx.html">Marx</a> utilizza per descrivere lo sfruttamento dei lavoratori
       da parte dei capitalisti, dove la ricchezza prodotta dai lavoratori è espropriata dai capitalisti sotto forma
       di profitto.
     </p>
