working updated sidebar

--- a/plusvalore.html
+++ b/plusvalore.html
@@ -14,17 +14,40 @@
   <!-- Hamburger Menu -->
   <div class="hamburger" onclick="toggleSidebar()">☰</div>
 
-  <!-- Sidebar -->
-  <nav class="sidebar" id="sidebar">
-    <div class="sidebar-header">
-      <h2>Navigation</h2>
-    </div>
-    <a href="index.html">Landing Page</a>
-    <a href="author.html">Autore</a>
-    <a href="capitale.html">Il Capitale</a>
-    <a href="plusvalore.html">Plusvalore</a>
-    <a href="manifesto.html">Manifesto del Partito Comunista</a>
-  </nav>
+<!-- sidebar -->
+<nav class="sidebar" id="sidebar">
+  <div class="sidebar-header">
+    <h2>Navigazione</h2>
+  </div>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li>
+      <strong>Figure</strong>
+      <ul>
+        <li><a href="Marx.html">Karl Marx</a></li>
+        <li><a href="engels.html">Friedrich Engels</a></li>
+        <li><a href="hegel.html">Georg Hegel</a></li>
+        <li><a href="heinrichmarx.html">Heinrich Marx</a></li>
+        <li><a href="adamsmith.html">Adam Smith</a></li>
+      </ul>
+    </li>
+    <li>
+      <strong>Opere</strong>
+      <ul>
+        <li><a href="capitale.html">Il Capitale</a></li>
+        <li><a href="manifesto.html">Manifesto del Partito Comunista</a></li>
+        <li><a href="plusvalore.html">Plusvalore</a></li>
+      </ul>
+    </li>
+    <li>
+      <strong>Concetti</strong>
+      <ul>
+        <li><a href="CorrentiFilosofiche.html">Correnti Filosofiche</a></li>
+        <li><a href="spostamenti.html">Spostamenti</a></li>
+      </ul>
+    </li>
+  </ul>
+</nav>
 
   <!-- Main Content -->
   <main class="content" id="content">
