--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
   <div id="preview-box" class="preview-box"></div>
 
   <script>
+    // Mostra il prompt quando il DOM è completamente caricato
+    document.addEventListener("DOMContentLoaded", function() {
+      alert("Questo sito è ottimizzato per un utilizzo da PC, le chiediamo gentilmente di accedere da lì.");
+    });
+
     function toggleSidebar() {
       document.getElementById("sidebar").classList.toggle("active");
       document.getElementById("content").classList.toggle("active");
